// #### Comments:
// - Comment ID
// - Post ID
// - User ID
// - Comment Text
// - Created Date
// - Updated Date
// - Likes Count
// - Replies Count

syntax = "proto3";

package model;
option go_package = ".;model";

message Comment{
    string id = 1;
    string user = 2;
    string post_id = 3;
    string user_id = 4;
    string replied_to = 5;
    string content = 6 ;
    int64 created_date = 7 ;
    int64 updated_date = 8 ;
    int64 likes = 9;
    repeated string replies = 10;
    bool is_deleted = 11;
    bool is_updated = 12;
}


message Comments {
    repeated Comment comments = 1;
}

